2005-12-19  Alexis Sukrieh	<sukria@backup-manager.org>

	* INSTALL:
	  + bits about dependencies
	* NEWS:
	  + The 0.6 Changelog
	* doc/DISCLAIMER:
	  + Removed, not needed anymore.
	* doc/README:
	  + Bits about the available formats.
	* doc/user-guide.txt:
	  + Added the text version in the repository, so users
	    can have a light version of the guide with the release.
	* doc/version.ent:
	  + Revision: 1.0

2005-12-19  Alexis Sukrieh	<sukria@backup-manager.org>

	* New configuration key BM_UPLOAD_SSH_PORT
	  + backup-manager.conf.tpl
	  + doc/user-guide.sgml
	* Added copyright headers
	  + lib/backup-methods.sh
	  + lib/dialog.sh
	  + lib/logger.sh
	  + lib/files.sh
	  + lib/gettext-dummy.sh:
	  + lib/gettext-real.sh:
	  + lib/gettext.sh:
	  + lib/md5sum.sh:
	* lib/sanitize.sh:
	  + added copyright header
	  + check for BM_BURNING
	* po/Makefile:
	  + Minor changes
	* po/backup-manager.pot:
	  + Added this pot file in the repository so people
	    without xgettext can install BM.
	* po/es.po:
	  + New version updated.

2005-12-16  Alexis Sukrieh  <sukria@backup-manager.org>

	* AUTHORS:
	  + Better, less confusing.
	* doc/user-guide.sgml:
	  + Sven Joachim fixes (typos...)

2005-12-16  Alexis Sukrieh  <sukria@backup-manager.org>

	* po/Makefile:
	  + better clean target.
	* po/vi.po:
	  + Final version of the Vietnamese translations.

2005-12-15  Alexis Sukrieh  <sukria@backup-manager.org>

	* AUTHORS:
	  + Added Clytie Siddall in the translators list.
	* po/it.po:
	  + Final version of the italian translation, thanks to Matteo Frarre
	  Barutti.

2005-12-13  Alexis Sukrieh  <sukria@backup-manager.org>

	* po/Makefile:
	  + use the .SUFFIXES method, better for handling correctly .mo files. 
	* po/backup-manager.pot:
	  + deleted, this file is generated on the fly.
	* po/es.po:
	  + Minor correction, waiting for the reviewed version.

2005-12-13  Alexis Sukrieh  <sukria@backup-manager.org>

	* AUTHORS:
	  + Cleaner
	  + Added translators
	* THANKS: